# ConnectomeBench2

./: LICENSE  README.md  env.sh.example  pyproject.toml
configs/: renderer_config_neurips_junction.yaml  renderer_config_neurips_unified.yaml
configs/cube_splits/fly/: manifest.json
configs/cube_splits/human/: manifest.json  test.json  train.json  val.json
configs/cube_splits/mouse/: manifest.json  test.json  val.json
configs/cube_splits/zebrafish/: manifest.json  test.json  train.json  val.json
scripts/data_generation/: build_operation_bank.py
scripts/data_generation/neurips/: build_cube_splits.py  build_giga_parquet.py  build_parquet_dataset.py  postprocess_giga_parquet.py
src/data_generation/connectome/: em_data.py  mesh_prefetch.py  meshes.py  operation_bank.py  proofread_roots.py  utils.py
src/data_generation/foundation/scenes/: fused_merge_pair_scene.py  merge_pair_scene.py  mesh_scene.py
src/data_generation/rendering/: __init__.py  camera_utils.py  geometry_renderer.py  highlight_utils.py  image_processing.py  kaolin_backend.py  render_pipeline.py  render_utils.py  scene_builder.py
src/data_generation/training/: __init__.py  question_dataset.py  training_data_ops.py  training_data_renderer.py
src/data_generation/utils/: __init__.py  profiler.py
src/neurips_training/: __init__.py  data.py  model.py  training.py  training_utils.py
src/neurips_training/configs/: full_4sp.yaml
